Adding print out of boroughs and dogs

--- a/Visualizing NYC Dog Data.ipynb
+++ b/Visualizing NYC Dog Data.ipynb
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -660,6 +660,22 @@
       "needs_background": "light"
      },
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Manhattan has 41303 dogs \n",
+      "\n",
+      "Brooklyn has 29289 dogs \n",
+      "\n",
+      "Queens has 23898 dogs \n",
+      "\n",
+      "Bronx has 12044 dogs \n",
+      "\n",
+      "Staten Island has 10557 dogs \n",
+      "\n"
+     ]
     }
    ],
    "source": [
@@ -674,7 +690,10 @@
     "plt.title(\"Dogs By Borough\",fontsize=25)\n",
     "plt.xlabel(\"Boroughs\",fontsize=15)\n",
     "plt.ylabel(\"Frequency\",fontsize = 15)\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "for i in range(0,len(borough)):\n",
+    "      print(str(borough[i]) + \" has \" + str(boroughCount[i]) +\" dogs \" +\"\\n\")"
    ]
   },
   {
