--- a/Linear Regression/Single and Multiple Regression Examples.ipynb
+++ b/Linear Regression/Single and Multiple Regression Examples.ipynb
@@ -479,11 +479,100 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Using dummy variables with sm.categorical\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "nsample = 50\n",
+    "\n",
+    "#create a list with 0's , 1's and 2's with length 50\n",
+    "\n",
+    "groups = np.zeros(nsample, int)\n",
+    "groups[20:40] = 1\n",
+    "groups[40:] = 2\n",
+    "#dummy = (groups[:,None] == np.unique(groups)).astype(float)\n",
+    "\n",
+    "dummy = sm.categorical(groups, drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "List that will be turned into dummy variable: \n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1\n",
+      " 1 1 1 2 2 2 2 2 2 2 2 2 2]\n",
+      "Dummy variable list of groups list \n",
+      " [[1. 0. 0.]\n",
+      " [1. 0. 0.]\n",
+      " [1. 0. 0.]\n",
+      " [1. 0. 0.]\n",
+      " [1. 0. 0.]\n",
+      " [1. 0. 0.]\n",
+      " [1. 0. 0.]\n",
+      " [1. 0. 0.]\n",
+      " [1. 0. 0.]\n",
+      " [1. 0. 0.]\n",
+      " [1. 0. 0.]\n",
+      " [1. 0. 0.]\n",
+      " [1. 0. 0.]\n",
+      " [1. 0. 0.]\n",
+      " [1. 0. 0.]\n",
+      " [1. 0. 0.]\n",
+      " [1. 0. 0.]\n",
+      " [1. 0. 0.]\n",
+      " [1. 0. 0.]\n",
+      " [1. 0. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 0. 1.]\n",
+      " [0. 0. 1.]\n",
+      " [0. 0. 1.]\n",
+      " [0. 0. 1.]\n",
+      " [0. 0. 1.]\n",
+      " [0. 0. 1.]\n",
+      " [0. 0. 1.]\n",
+      " [0. 0. 1.]\n",
+      " [0. 0. 1.]\n",
+      " [0. 0. 1.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('List that will be turned into dummy variable:', '\\n' , groups)\n",
+    "print('Dummy variable list of groups list \\n' , dummy)"
+   ]
   },
   {
    "cell_type": "code",
